remove unnecesary console.log and create new end point to create user
